<resources>
    <string name="app_name">IN&amp;OUT</string>
    <string name="you_are_new_create_new">You are new? Create new</string>
    <string name="user_name">User name</string>
    <string name="go"><![CDATA[->]]></string>
    <string name="title_activity_nav_">nav_Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="username">user name</string>
    <string name="password">password</string>
    <string name="email">Email</string>
    <string name="phone">phone</string>
    <string name="addres">addres</string>
    <string name="by_pressing_next_you_agree_to_our">By pressing Next you agree to our</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions]]></string>
    <string name="next">➙</string>
    <string name="birth_date">birth date</string>
    <string-array name="gender">
        <item>gender </item>
        <item>Male </item>
        <item>Female </item>
    </string-array>
    <string-array name="day">
        <item>day </item>
        <item>1 </item>
        <item>2 </item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="month">
        <item>month </item>
        <item>1 </item>
        <item>2 </item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <string-array name="year">
        <item>month </item>
        <item>2000  </item>
        <item>2001 </item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
    </string-array>
</resources>