<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    >
    <ProgressBar
        android:id="@+id/progress_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="invisible"
        />

    <ImageView
        android:layout_width="268dp"
        android:layout_height="367dp"
        android:layout_alignParentStart="true"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/yellow" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-50dp"
        android:layout_marginTop="-50dp"
        android:layout_alignParentEnd="true"
        android:src="@drawable/tour" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="-200dp"
        android:layout_marginEnd="150dp"
        android:src="@drawable/tour2" />
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="150dp"
        android:background="@drawable/corner"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/edusernamerig"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_person"
            android:layout_marginLeft="09dp"
            android:layout_marginRight="09dp"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:background="@drawable/corner"
            android:hint="@string/username"
            tools:ignore="RtlSymmetry" />

        <EditText
            android:id="@+id/edpasswordrig"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_lock"
            android:layout_marginLeft="09dp"
            android:layout_marginRight="09dp"
            android:layout_marginTop="85dp"
            android:hint="@string/password"
            android:textColor="@color/black"
            android:background="@drawable/corner"
            tools:ignore="RtlSymmetry"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/edemailrig"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="09dp"
            android:drawablePadding="10dp"
            android:drawableStart="@drawable/ic_email"
            android:paddingStart="20dp"
            android:layout_marginRight="09dp"
            android:layout_marginTop="145dp"
            android:hint="@string/email"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:background="@drawable/corner"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/edphonerig"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:layout_marginLeft="09dp"
            android:hint="@string/phone"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_phone"
            android:layout_marginRight="09dp"
            android:layout_marginTop="205dp"
            android:background="@drawable/corner"
            android:inputType="phone"
            tools:ignore="RtlSymmetry" />
        <EditText
            android:id="@+id/edaddresrig"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="20dp"
            android:hint="@string/addres"
            android:drawablePadding="10dp"
            android:textColor="@color/black"
            android:drawableStart="@drawable/ic_location"
            android:layout_marginLeft="09dp"
            android:layout_marginRight="09dp"
            android:layout_marginTop="265dp"
            android:background="@drawable/corner"
            tools:ignore="RtlSymmetry" />

        <Spinner
            android:id="@+id/spngenderrig"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="09dp"
            android:layout_marginTop="325dp"
            android:layout_marginRight="09dp"
            android:background="@drawable/corner"
            android:entries="@array/gender"
            android:paddingLeft="09dp"
            android:textColor="@color/black"

            tools:ignore="RtlSymmetry" />
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="400dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="09dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/birth_date" />



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="425dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="80dp"
            android:orientation="horizontal"
            >

            <Spinner
                android:id="@+id/spndayrig"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:entries="@array/day"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spnmonthrig"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:entries="@array/month"
                android:textColor="@color/black" />

            <Spinner
                android:id="@+id/spnyearrig"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:entries="@array/year" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="510dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:text="@string/by_pressing_next_you_agree_to_our" />
        <TextView
            android:id="@+id/tvxterms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="530dp"
            android:layout_marginBottom="15dp"
            android:textSize="15sp"
            android:layout_gravity="center_horizontal"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/YEELOW" />

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnrig"
        android:layout_width="89dp"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="10dp"
        android:text="@string/next"
        android:gravity="center"
        android:textSize="35sp"
        android:textColor="@color/white"
        android:background="@drawable/button" />
    <ImageView
        android:id="@+id/imgbackrig"
        android:layout_width="41dp"
        android:layout_height="34dp"
        android:src="@drawable/icback1" />

</RelativeLayout>